test_apps/test-typechecker/fail/initreturn.app
application test

section functions

define page home(i : Int) {
  init {
    return nonexistent(i);
  }
}
